--- a/docs/getit.css
+++ b/docs/getit.css
@@ -25,6 +25,7 @@ Algumas informações úteis e dicas:
   width: 90px;
   height: 50px;
   margin-left: 0.2rem;
+  margin-top: 0.5rem;
   display: flex;
   align-items: flex-start;
   justify-content: center;
@@ -37,6 +38,7 @@ Algumas informações úteis e dicas:
   font-size: large;
 }
 .appbar{
+  display: flex;
   background-color: #f7d736;
   height: 4.5rem;
   margin-bottom: 2rem;
@@ -135,4 +137,107 @@ body {
   padding-top: 120%;
 
   transition: width 0.2s ease-out, padding-top 0.2s ease-out;
+}
+
+
+.card {
+  width: 150px;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  font-family: 'Permanent Marker', cursive;
+}
+
+.card.card-color-1 {
+  background-color: #ead3a7 !important;
+}
+
+.card.card-color-2 {
+  background-color: #9de0f5 !important;
+}
+
+.card.card-color-3 {
+  background-color: #ef89ba !important;
+}
+
+.card.card-color-4 {
+  background-color: #fae890 !important;
+}
+
+.card.card-color-5 {
+  background-color: #abe9c1 !important;
+}
+
+.card.card-rotation-1 {
+  transform: rotate(-4deg);
+}
+
+.card.card-rotation-2 {
+  transform: rotate(-3deg);
+}
+
+.card.card-rotation-3 {
+  transform: rotate(-2deg);
+}
+
+.card.card-rotation-4 {
+  transform: rotate(-1deg);
+}
+
+.card.card-rotation-5 {
+  transform: rotate(0deg);
+}
+
+.card.card-rotation-6 {
+  transform: rotate(1deg);
+}
+
+.card.card-rotation-7 {
+  transform: rotate(2deg);
+}
+
+.card.card-rotation-8 {
+  transform: rotate(3deg);
+}
+
+.card.card-rotation-9 {
+  transform: rotate(4deg);
+}
+
+.card.card-rotation-10 {
+  transform: rotate(5deg);
+}
+
+.card.card-rotation-11 {
+  transform: rotate(6deg);
+}
+
+.card-title {
+  margin-top: 0;
+  color: black;
+  font-family: 'Permanent Marker', cursive;
+}
+
+.p{
+  font-family: 'Permanent Marker', cursive;
+  color: #2c2c2c;
+}
+
+.container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  margin-top: 2rem;
+} 
+
+.card-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  margin-top: 2rem;
+  gap: 0.6rem;
 }
