--- a/docs/getit.css
+++ b/docs/getit.css
@@ -24,18 +24,19 @@ Algumas informações úteis e dicas:
  .logo {
   width: 90px;
   height: 50px;
-  margin-left: 0.2rem;
+  margin-left: 0.3rem;
   margin-top: 0.5rem;
   display: flex;
   align-items: flex-start;
   justify-content: center;
 }
 .subtitle {
-  font-size: 1.5em;
+  font-size: 1.2em;
   display: flex;
   align-items: center; 
   color: #2c2c2c;
   font-size: large;
+  margin-left: 1rem;
 }
 .appbar{
   display: flex;
@@ -43,25 +44,26 @@ Algumas informações úteis e dicas:
   height: 4.5rem;
   margin-bottom: 2rem;
   /* text-align: center; */
-  box-shadow: #2c2c2c 0px 0px 10px;
+  box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.6);
 }
 .form-card {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.6);
-  width: 32%;
-  border-radius: 0.2rem;
+  box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.6);
+  width: 36%;
+  border-radius: 0.3rem;
 }
 input {
   border: none;
   width: 80%;
   color: #2c2c2c;
-  font-size: large;
-  margin-bottom: 0.5rem;
-  margin-left: 0rem;
-  padding-left: 0rem;
+  font-size: 17px;
+  margin-bottom: 0.7rem;
+  padding-right: 5rem;
+  font-weight: 550;
+  padding-top: 0.7rem;
 }
 textarea {
   border: none;
@@ -69,6 +71,8 @@ textarea {
   color: #2c2c2c;
   font-size: small;
   font-family: "Roboto", sans-serif;
+  padding-right: 5rem;
+  font-weight: 550;
 }
 /* .btn {
   padding: 0.5rem;
@@ -93,14 +97,14 @@ body {
   position: relative;
   display: block;
   padding: 10px 15px;
-  width: 94%;
+  width: 96%;
   overflow: hidden;
   margin-bottom: 0.5rem;
   border-width: 0;
   outline: none;
   border-radius: 2px;
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.6);
-
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.6);
+  color: black;
   background-color: #f7d736;
 
   transition: background-color 0.3s;
@@ -139,13 +143,38 @@ body {
   transition: width 0.2s ease-out, padding-top 0.2s ease-out;
 }
 
-
 .card {
-  width: 150px;
-  padding: 20px;
+  width: 12rem;
+  height: 7rem;
   border: 1px solid #ccc;
   border-radius: 8px;
   font-family: 'Permanent Marker', cursive;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.6);
+  margin-left: 0.2rem;
+  margin-right: 0.2rem;
+}
+
+.card-title {
+  padding-top: 6px;
+  padding-left: 8px;
+  padding-right: 8px;
+  margin-top: 0;
+  color: black;
+  font-size: 17px;
+  font-family: 'Permanent Marker', cursive;
+  font-weight: 700;
+}
+
+.card-content{
+  margin-top: 0.6rem;
+  padding-left: 7px;
+  font-size: 14px;
+  font-weight: 500;
+  font-family: 'Permanent Marker', cursive;
+  color: #2c2c2c;
+  display: flex;
+  justify-content: center;
+  align-self: center;
 }
 
 .card.card-color-1 {
@@ -182,6 +211,7 @@ body {
 
 .card.card-rotation-4 {
   transform: rotate(-1deg);
+  margin-top: 1rem;
 }
 
 .card.card-rotation-5 {
@@ -210,17 +240,6 @@ body {
 
 .card.card-rotation-11 {
   transform: rotate(6deg);
-}
-
-.card-title {
-  margin-top: 0;
-  color: black;
-  font-family: 'Permanent Marker', cursive;
-}
-
-.p{
-  font-family: 'Permanent Marker', cursive;
-  color: #2c2c2c;
 }
 
 .container {
