--- a/docs/getit.css
+++ b/docs/getit.css
@@ -43,15 +43,16 @@ Algumas informações úteis e dicas:
   background-color: #f7d736;
   height: 4.5rem;
   margin-bottom: 2rem;
-  /* text-align: center; */
-  box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.6);
+  justify-content:flex-start;
+  align-items: center;
+  box-shadow: 0 10px 28px rgba(0,0,0,0.30), 0 10px 12px rgba(0,0,0,0.22);
 }
 .form-card {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.6);
+  box-shadow: 0 10px 28px rgba(0,0,0,0.30), 0 10px 12px rgba(0,0,0,0.22);
   width: 36%;
   border-radius: 0.3rem;
 }
@@ -143,15 +144,33 @@ body {
   transition: width 0.2s ease-out, padding-top 0.2s ease-out;
 }
 
+p{
+  display: flex;
+  justify-content: center;
+}
+
+.card-container{
+  display: flex;
+  flex-direction: row;
+  align-content: space-around;
+  justify-content: space-around;
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 260px;
+  margin-left: 20px;
+  margin-right: 20px;
+  
+}
+
 .card {
   width: 12rem;
   height: 7rem;
-  border: 1px solid #ccc;
   border-radius: 8px;
   font-family: 'Permanent Marker', cursive;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.6);
+  box-shadow: 0 10px 28px rgba(0,0,0,0.30), 0 10px 12px rgba(0,0,0,0.22);
   margin-left: 0.2rem;
   margin-right: 0.2rem;
+  border: 0.5px solid #ead3a7;
 }
 
 .card-title {
